<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Nuevo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_nuevo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_name"
                android:textColor="#000000"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_nuevo_name"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_nuevo_name"
                android:hint="@string/write_here"/>

            <TextView
                android:id="@+id/tv_nuevo_fecha_salida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_nuevo_name"
                android:text="@string/launchdate"
                android:textColor="#000000"
                android:layout_marginTop="10dp"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_nuevo_fecha_salida"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="dd mm yyyy"
                android:textAlignment="center"
                android:layout_alignParentRight="true"
                android:layout_below="@id/et_nuevo_name"/>


            <TextView
                android:id="@+id/tv_nuevo_consola"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/console"
                android:textSize="20dp"
                android:textColor="#000000"
                android:layout_below="@id/et_nuevo_fecha_salida"/>

            <RadioGroup
                android:layout_marginTop="5dp"
                android:id="@+id/rg_nuevo_consola"
                android:layout_below="@id/tv_nuevo_consola"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton android:id="@+id/rb_nuevo_xbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xbox"
                    android:textSize="10dp"/>

                <RadioButton android:id="@+id/rb_nuevo_playstation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/playstation"
                    android:textSize="10dp"/>

                <RadioButton android:id="@+id/rb_nuevo_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nintendo_switch"
                    android:textSize="10dp"/>

                <RadioButton android:id="@+id/rb_nuevo_multi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/multiplatform"
                    android:textSize="10dp"/>

            </RadioGroup>

            <TextView
                android:id="@+id/tv_nuevo_genero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="20dp"
                android:textColor="#000000"
                android:layout_below="@id/rg_nuevo_consola"/>

            <Spinner
                android:id="@+id/s_nuevo_genero"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/tv_nuevo_genero"
                android:layout_marginTop="5dp"/>

            <CheckBox
                android:id="@+id/cb_nuevo_has_played"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/has_played"
                android:layout_below="@id/s_nuevo_genero"/>

            <Button
                android:id="@+id/bt_nuevo_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cb_nuevo_has_played"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:text="@string/accept"
                android:onClick="aceptar"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>